[CDAP-13238] Adds Compute Profiles section to Namespace Details page, and minor bugfixes - Don't highlight Control Center in header while in Namespace details page - Adds Compute Profiles section, using mock data - Uses grid mixin instead of SortableTable - Fixes footer overflowing/disappearing on small screen resolutions, when opening up a modal - Uses onChange from list view instead of taking a header rendering function as props

--- a/cdap-ui/app/cdap/components/Experiments/ExperimentsServiceControl/ExperimentsServiceControl.scss
+++ b/cdap-ui/app/cdap/components/Experiments/ExperimentsServiceControl/ExperimentsServiceControl.scss
@@ -20,6 +20,7 @@
   display: flex;
   height: calc(100vh - 104px);
   font-size: 15px;
+  overflow: auto;
 
   .text-container,
   .image-containers {
