--- a/cdap-ui/app/cdap/components/NamespaceDetails/Preferences/Preferences.scss
+++ b/cdap-ui/app/cdap/components/NamespaceDetails/Preferences/Preferences.scss
@@ -22,6 +22,7 @@ $link-color: #0275d8;
   .namespace-details-section-label {
     .edit-label {
       color: $link-color;
+      font-size: 13px;
       margin-left: 10px;
       cursor: pointer;
     }
